<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.CoinDetailFragment">

    <ImageView
        android:id="@+id/ivLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/holo_purple"
        android:text="BTC"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="/"
        android:textColor="?android:attr/textColorPrimaryDisableOnly"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_light"
        android:text="USD"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="32000"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/min_for_day"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="31000"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvMinPriceLabel"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/max_for_day"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="31000"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvMinPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvMaxPriceLabel"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvLastDealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/last_deal"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="Bitfinex"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvLastDealLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvMaxPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLastDealLabel"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvUpdatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/updated"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastDealLabel" />

            <TextView
                android:id="@+id/tvUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="21:05:06"
                android:textColor="?android:attr/textColorPrimaryDisableOnly"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUpdatedLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvLastDealLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>